fix for map z-index issue

--- a/srcmedia/scss/members/_details.scss
+++ b/srcmedia/scss/members/_details.scss
@@ -44,6 +44,7 @@ dl.member {
 section[aria-label=timeline],
 section.map {
     @include container;
+    z-index: 0; // strange bug...map will be on top of main menu when it's open unless this is set
 
     hr {
         width: 100%;
